# azure_keyvault_pkcs11

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  attributes.cpp  aws_kms_pkcs11.cpp  aws_kms_pkcs11_test.c  aws_kms_slot.cpp  aws_kms_slot.h  certificates.cpp  gpg_signing.md  kernel_mod_signing.md  keyvault.cpp
.circleci/: config.yml
.devcontainer/: devcontainer.json
cmake-vcpkg/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: attributes.cpp  attributes.h  aws_kms_slot.cpp  azure-keyvault-pkcs11.cpp  azure-keyvault-slot.cpp  azure-keyvault-slot.h  azure_kms_pkcs11.version  certificates.cpp  certificates.h  debug.cpp  unsupported.cpp  unsupported.h
test/: aws_kms_pkcs11_test.c  azure-keyvault-pkcs11-test.c  certificates_test.cpp
